# signal-bot-tee

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TESTING_PLAN.md  rust-toolchain.toml
.cargo/: config.toml
.vercel/: project.json
crates/conversation-store/: Cargo.toml
crates/conversation-store/src/: error.rs  lib.rs  store.rs  types.rs
crates/dstack-client/: Cargo.toml
crates/dstack-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/near-ai-client/: Cargo.toml
crates/near-ai-client/examples/: test_tool_calling.rs
crates/near-ai-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/signal-bot/: Cargo.toml
crates/signal-bot/src/: config.rs  error.rs  lib.rs  main.rs
crates/signal-bot/src/commands/: balance.rs  chat.rs  clear.rs  deposit.rs  help.rs  mod.rs  models.rs  verify.rs
crates/signal-bot/tests/: e2e_test.rs  near_ai_test.rs
crates/signal-bot/tests/common/: mod.rs
crates/signal-client/: Cargo.toml
crates/signal-client/src/: client.rs  error.rs  lib.rs  receiver.rs  types.rs
crates/signal-registration-proxy/: Cargo.toml
crates/signal-registration-proxy/src/: config.rs  error.rs  lib.rs  main.rs
crates/signal-registration-proxy/src/api/: handlers.rs  middleware.rs  mod.rs  types.rs
crates/signal-registration-proxy/src/registry/: encrypted.rs  memory.rs  mod.rs
crates/signal-registration-proxy/src/signal/: client.rs  mod.rs
crates/signal-registration-proxy/tests/: api_tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: error.rs  executor.rs  lib.rs  registry.rs  types.rs
crates/tools/src/builtin/: calculator.rs  mod.rs  weather.rs  web_search.rs
crates/x402-payments/: Cargo.toml
crates/x402-payments/src/: config.rs  error.rs  lib.rs  sweeper.rs  types.rs
crates/x402-payments/src/api/: handlers.rs  mod.rs  types.rs
crates/x402-payments/src/chains/: base.rs  mod.rs  near.rs  solana.rs
crates/x402-payments/src/credits/: mod.rs  pricing.rs  store.rs
docker/: Dockerfile  Dockerfile.proxy  docker-compose.yaml  phala-compose.yaml  phala-test.yaml  phala.env
docker/.phala/: config
docs/: plan-registration-proxy.md  plan-tool-use-system.md
docs/plans/: 2024-12-15-tool-use-implementation.md  2024-12-15-tool-use-system-design.md  2024-12-16-web-frontend-design.md  2024-12-21-fund-sweeping-multichain-design.md  2024-12-21-fund-sweeping-multichain-impl.md  x402-payment-integration.md
scripts/: deploy_phala.sh  setup_signal.sh
web/: index.html  package-lock.json  package.json  vercel.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/: BotCard.tsx  Hero.tsx  RegistrationForm.tsx  VerificationPanel.tsx
web/src/hooks/: useAttestation.ts  useBots.ts
web/src/lib/: api.ts
