[workspace]
resolver = "2"
members = [
    "crates/signal-bot",
    "crates/near-ai-client",
    "crates/conversation-store",
    "crates/dstack-client",
    "crates/signal-client",
    "crates/signal-registration-proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/zmanian/signal-bot-tee"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = [
    "json", "rustls-tls", "stream"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime-serde = "1.1"

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Unix socket support
hyper = { version = "0.14", features = ["client", "http1"] }
hyperlocal = "0.8"

# Testing
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
