[package]
name = "dstack-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
hyper.workspace = true
hyperlocal.workspace = true
hex.workspace = true
base64.workspace = true

[dev-dependencies]
tokio-test.workspace = true
