[package]
name = "near-ai-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream.workspace = true
secrecy.workspace = true

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true
