[package]
name = "signal-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
urlencoding = "2"

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
